<resources>
    <item name="action_chat_wallpaper" type="id" />
</resources>
